Cleanup file hierarchy for gh-pages.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Steve's Story</title>
-		
-		<link href="../pongStyle.css" rel="stylesheet" type="css">
+
+		<link href="pongStyle.css" rel="stylesheet" type="css">
 	</head>
-	
+
 	<body align="center">
 		<h1>Steve's Drunk. Again.</h1>
 		<h3>and he keeps going on and on</h3>
@@ -17,13 +17,13 @@
 		<h2>Now there's this catch...</h2>
 		<h3>The drunker Steve gets, the more green he sees.</h3>
 		<h3>And the more green he sees, the worse his accuracy gets, so:</h3>
-		
+
 		<br />
-		
+
 		<h1>Are you gonna put up with this?</h1>
-		
+
 		<h3>Go on, get in there, and show him you mean</h3>
-		<h1><a href="final.html">Business</a></a></h1>
+		<h1><a href="game/">Business</a></a></h1>
 
 		<h5>Also, the closer things get to Steve, the more blue they become (Nobody knows why).</h5>
 	</body>
