--- a/game/index.html
+++ b/game/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Pong!</title>
 		
-		<link rel="stylesheet" href=".,/pongStyle.css" type="css"></link>
+		<link rel="stylesheet" href="../pongStyle.css" type="css"></link>
 	</head>
 	
 	<body align="center">
