Fix stylesheet issue

--- a/game/index.html
+++ b/game/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Pong!</title>
-		
-		<link rel="stylesheet" href=".,/pongStyle.css" type="css"></link>
+
+		<link rel="stylesheet" href="../pongStyle.css" type="css"></link>
 	</head>
-	
+
 	<body align="center">
 		<audio src="../sounds/sandstorm.mp3"></audio>
 		<audio src="../sounds/pong1.wav"></audio>
@@ -16,6 +16,6 @@
 		<script src="../packages/keypress-2.1.0.min.js"></script>
 		<script src="../packages/p5.min.js"></script>
 		<script src="../pongScript.js"></script>
-		<div id="sillyness"></div>	
+		<div id="sillyness"></div>
 	</body>
 </html>
