--- a/game/index.html
+++ b/game/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Pong!</title>
-		
-		<link rel="stylesheet" href="../pongStyle.css" type="css"></link>
+
+		<link rel="stylesheet" href="../pongStyle.css" type="text/css"></link>
 	</head>
 
 	<body align="center">
