--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Steve's Story</title>
 
-		<link href="pongStyle.css" rel="stylesheet" type="css"></link>
+		<link rel="stylesheet" href="pongStyle.css" type="text/css" />
 	</head>
 
 	<body align="center">
